--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button (click)="changeUser()">Change user</button>
-<button (click)="changeArray()">Change array</button>
-<button (click)="addUser()">Add user</button>
+<button (click)="changeUser()">cambia utente</button>
+<button (click)="changeArray()">cambia array</button>
+<button (click)="addUser()">aggiungi utente</button>
