--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,11 @@
-<h1  appBackgroundTextColor="red">Angular pipe</h1>
+<h1 [appBackground]="titleColor" appBackgroundTextColor="red" [appExist]="true" appResize="flex" appResizeH="100px"
+    appResizeW="200px" appCycle="Subtitle Wowee">Angular pipe</h1>
 
-<app-list
-[userList]="listData.usersArray"
-[listBackgroundColor]="listData.background"
-></app-list>
+<app-list [userList]="listData.usersArray" [listBackgroundColor]="listData.background"></app-list>
 
 
 
-<app-button 
-(arrayChanged)="onArrayChanged($event)"
-(userChanged)="onUserChanged()"
-(userAdded)="onUserAdded($event)"
-></app-button>
+<app-button (arrayChanged)="onArrayChanged($event)" (userChanged)="onUserChanged()" (userAdded)="onUserAdded($event)">
+</app-button>
 
 <router-outlet></router-outlet>
